[project]
name = "vand-industrial"
version = "0.1.0"
description = "VAND 4.0 Industrial Track — Your submission"
requires-python = ">=3.11"
dependencies = [
    "vand-utils",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
    "torch>=2.11.0",
    "torchvision==0.26.0",
    "torchmetrics>=1.9.0",
    "termcolor>=3.3.0",
    "dinov3",
    "pandas>=3.0.2",
]

[project.scripts]
train-industrial = "industrial.train:main"
test-industrial = "industrial.test:main"
submit-industrial = "industrial.submit:main"

[tool.uv.sources]
vand-utils = { workspace = true }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
dinov3 = { git = "https://github.com/facebookresearch/dinov3" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/industrial"]
